# XHexViewer

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: builder.yml  cmake-multi-platform.yml
res/: resource.rc
res/translation/: xhexviewer_ar.ts  xhexviewer_bn.ts  xhexviewer_de.ts
src/: CMakeLists.txt  global.h
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  xhexviewer_resource.rc
